try ubuntu-22.04 for release workflow due to extension install failure on arm64

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,7 @@ env:
 
 jobs:
   prepare:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     outputs:
       variants: ${{ steps.matrix.outputs.variants }}
       platforms: ${{ steps.matrix.outputs.platforms }}
@@ -156,7 +156,7 @@ jobs:
           PHP_VERSIONS: ${{ steps.check_image.outputs.php_versions }}
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     needs:
       - prepare
     if: ${{ needs.prepare.outputs.php_versions != '' }}
@@ -242,7 +242,7 @@ jobs:
           retention-days: 1
 
   merge:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     if: github.event_name != 'pull_request'
     needs:
       - prepare
