--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -190,6 +190,7 @@ jobs:
           targets: |
             ${{ matrix.variant }}-base
             ${{ matrix.variant }}-ffmpeg
+            ${{ matrix.variant }}-otel
           provenance: true
           set: |
             *.tags=
@@ -198,6 +199,8 @@ jobs:
             ${{ matrix.variant }}-base.cache-to=type=gha,scope=${{ matrix.variant }}-base-${{ needs.prepare.outputs.ref || github.ref }}-${{ matrix.platform }}
             ${{ matrix.variant }}-ffmpeg.cache-from=type=gha,scope=${{ matrix.variant }}-ffmpeg-${{ needs.prepare.outputs.ref || github.ref }}-${{ matrix.platform }}
             ${{ matrix.variant }}-ffmpeg.cache-to=type=gha,scope=${{ matrix.variant }}-ffmpeg-${{ needs.prepare.outputs.ref || github.ref }}-${{ matrix.platform }}
+            ${{ matrix.variant }}-otel.cache-from=type=gha,scope=${{ matrix.variant }}-otel-${{ needs.prepare.outputs.ref || github.ref }}-${{ matrix.platform }}
+            ${{ matrix.variant }}-otel.cache-to=type=gha,scope=${{ matrix.variant }}-otel-${{ needs.prepare.outputs.ref || github.ref }}-${{ matrix.platform }}
             *.output=type=image,name=${{ env.GHCR_SLUG }},push-by-digest=true,name-canonical=true,push=${{ github.event_name != 'pull_request' }}
         env:
           SHA: ${{ github.sha }}
@@ -235,6 +238,14 @@ jobs:
         with:
           name: digest-${{ matrix.variant }}-ffmpeg-${{ env.PLATFORM_PAIR }}
           path: /tmp/digest/ffmpeg/*
+          if-no-files-found: error
+          retention-days: 1
+
+      - name: Upload OTEL digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digest-${{ matrix.variant }}-otel-${{ env.PLATFORM_PAIR }}
+          path: /tmp/digest/otel/*
           if-no-files-found: error
           retention-days: 1
 
