--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -32,9 +32,9 @@ tasks:
     summary: |
       Example:
 
-      task act:push:version pv="8.4.10"
+      task act:push:version pv="8.5.0"
     vars:
-      PHP_VERSIONS: '{{ .pv | default "8.4.10"}}'
+      PHP_VERSIONS: '{{ .pv | default "8.5.0"}}'
     cmds:
       - act push --input version={{.PHP_VERSIONS}}
 
@@ -57,14 +57,14 @@ tasks:
   bake:
     desc: Bake
     vars:
-      PHP_VERSIONS: '{{ .pv | default "8.1.33,8.2.29,8.3.25,8.4.12"}}'
+      PHP_VERSIONS: '{{ .pv | default "8.1.33,8.2.29,8.3.28,8.4.15,8.5.0"}}'
     cmds:
       - PHP_VERSIONS={{.PHP_VERSIONS}} docker buildx bake --set *.platform=linux/amd64
 
   bake:print:
     desc: Bake print options without building
     vars:
-      PHP_VERSIONS: '{{ .pv | default "8.1.33,8.2.29,8.3.25,8.4.12"}}'
+      PHP_VERSIONS: '{{ .pv | default "8.1.33,8.2.29,8.3.28,8.4.15,8.5.0"}}'
     cmds:
       - PHP_VERSIONS={{.PHP_VERSIONS}} docker buildx bake --print | $JQ
 
@@ -73,12 +73,12 @@ tasks:
     desc: Trivy
     vars:
       TRIVY_VERSION: '{{ .tv | default "latest" }}'
-      PHP_BASE: '{{ .pv | default "8.4.12-fpm-bookworm"}}'
+      PHP_BASE: '{{ .pv | default "8.5.0-fpm-trixie"}}'
       TARGET: '{{ .t | default "ffmpeg" }}'
     cmds:
       - |
         docker build \
-        --build-context php-base=docker-image://php:8.4.12-fpm-bookworm \
+        --build-context php-base=docker-image://php:{{.PHP_BASE}} \
         --target {{.TARGET}} \
         -t toshy/trivy:{{.PHP_BASE}} .
       - |
